# pc-ble-driver

./: .gitignore  pyproject.toml
test/: CMakeLists.txt
test/softdevice_api/: test.cpp  testcase_advertising.cpp  testcase_driver_open_close.cpp  testcase_issue_128bit_uuid.cpp  testcase_issue_gh_112.cpp  testcase_issue_stuck_in_scan_mode.cpp  testcase_phy_update.cpp  testcase_rssi.cpp  testcase_security.cpp  testcase_util.cpp
test/transport/: test_serial_port_enum.cpp
