[tool.poetry]
name = "pc-ble-driver"
version = "0.1.0"
description = ""
authors = ["lihao <lihao@higgsasset.com>"]
readme = "README.md"
packages = [{include = "pc_ble_driver"}]

[tool.poetry.dependencies]
python = "~3.10"
nrfutil = "^6.1.7"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
